{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 35,
  "lineage": "154f7821-753c-e1a0-8615-8f7c3baf59df",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:internet-gateway/igw-00f434ac18908fb5a",
            "id": "igw-00f434ac18908fb5a",
            "owner_id": "253942872677",
            "tags": {
              "Name": "network-igw-new"
            },
            "tags_all": {
              "Name": "network-igw-new"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:vpc/vpc-0fe5623b981adff5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05fd83db748f774ed",
            "default_route_table_id": "rtb-0f59a63b016b79a1e",
            "default_security_group_id": "sg-02431e6c766a2fa08",
            "dhcp_options_id": "dopt-056ccb048ef9d87f8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fe5623b981adff5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f59a63b016b79a1e",
            "owner_id": "253942872677",
            "tags": {
              "Name": "network-vpc"
            },
            "tags_all": {
              "Name": "network-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.PrivateSubnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070b7428b9cddd77a",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-06f89f3512fd71fbd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137f251f71a19336",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-0af5c003cccc83976"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1be070787339186",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-0b7df2ce8c2f4ebc4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079bd71f69bf3aece",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-075c6b9a370c2fe37"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4fd65f88cc9c82b",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-02e1196a84a2c333e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a1a43337b2f1959",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-04b3feeb45cb9eda1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9a16aba28ad51f0",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-0b07398e644a2dcec"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c8ed9f5d3f33acc",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-096e231dd9c5c7cd5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07636a6844987f01c",
            "route_table_id": "rtb-03b664a0876a39ebd",
            "subnet_id": "subnet-0e983e21ef7fe72a4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PrivateSubnets.aws_subnet.subnet",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.privateRouteTable.aws_route_table.route_table",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PrivateSubnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-06f89f3512fd71fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f89f3512fd71fbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-1"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-1"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0af5c003cccc83976",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af5c003cccc83976",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-2"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-2"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0b7df2ce8c2f4ebc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7df2ce8c2f4ebc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-3"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-3"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-075c6b9a370c2fe37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075c6b9a370c2fe37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-4"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-4"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-02e1196a84a2c333e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e1196a84a2c333e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-5"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-5"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-04b3feeb45cb9eda1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b3feeb45cb9eda1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-6"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-6"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0b07398e644a2dcec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b07398e644a2dcec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-7"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-7"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-096e231dd9c5c7cd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096e231dd9c5c7cd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-8"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-8"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0e983e21ef7fe72a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e983e21ef7fe72a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-private-subnet-new-9"
            },
            "tags_all": {
              "Name": "network-private-subnet-new-9"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PublicSubnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040fe6fa219d15c52",
            "route_table_id": "rtb-0cf98a0dfe56e108b",
            "subnet_id": "subnet-0b6f465039a38c5bd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cd35572bd1fa7cf",
            "route_table_id": "rtb-0cf98a0dfe56e108b",
            "subnet_id": "subnet-06cee27b9068b1fb7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8c4d819c6c581d2",
            "route_table_id": "rtb-0cf98a0dfe56e108b",
            "subnet_id": "subnet-06fd6b3c39eaa221d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.PublicSubnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-0b6f465039a38c5bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6f465039a38c5bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-public-subnet-new-1"
            },
            "tags_all": {
              "Name": "network-public-subnet-new-1"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-06cee27b9068b1fb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cee27b9068b1fb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-public-subnet-new-2"
            },
            "tags_all": {
              "Name": "network-public-subnet-new-2"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:subnet/subnet-06fd6b3c39eaa221d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fd6b3c39eaa221d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253942872677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "network-public-subnet-new-3"
            },
            "tags_all": {
              "Name": "network-public-subnet-new-3"
            },
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.nat-gateway[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c04c0dc830d02f6b",
            "domain": "vpc",
            "id": "eipalloc-0c04c0dc830d02f6b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-133-28-148.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.28.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.nat-gateway[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c04c0dc830d02f6b",
            "connectivity_type": "public",
            "id": "nat-0ff11899143c4d3e5",
            "network_interface_id": "eni-094a40d3a634972aa",
            "private_ip": "10.0.2.80",
            "public_ip": "3.133.28.148",
            "subnet_id": "subnet-06cee27b9068b1fb7",
            "tags": {
              "Name": "network-nat-new"
            },
            "tags_all": {
              "Name": "network-nat-new"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.privateRouteTable[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:route-table/rtb-03b664a0876a39ebd",
            "id": "rtb-03b664a0876a39ebd",
            "owner_id": "253942872677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ff11899143c4d3e5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "network-private-rt-new-rt"
            },
            "tags_all": {
              "Name": "network-private-rt-new-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.PublicSubnets.aws_route_table_association.route_table_association",
            "module.vpc.module.PublicSubnets.aws_subnet.subnet",
            "module.vpc.module.nat-gateway.aws_eip.nat_ip",
            "module.vpc.module.nat-gateway.aws_nat_gateway.nat-gw",
            "module.vpc.module.publicRouteTable.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.publicRouteTable[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:route-table/rtb-0cf98a0dfe56e108b",
            "id": "rtb-0cf98a0dfe56e108b",
            "owner_id": "253942872677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f434ac18908fb5a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "network-public-rt-new-rt"
            },
            "tags_all": {
              "Name": "network-public-rt-new-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253942872677:security-group/sg-0e3f5707e5bf602c0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e3f5707e5bf602c0",
            "ingress": [],
            "name": "network-sg-name-new",
            "name_prefix": "",
            "owner_id": "253942872677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "network-sg-name-new",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Name": "network-sg-name-new",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5623b981adff5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_with_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-2663795265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e3f5707e5bf602c0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_web_security_group[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Rule for port 80",
            "from_port": 80,
            "id": "sgrule-1460193447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e3f5707e5bf602c0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Rule for port 443",
            "from_port": 443,
            "id": "sgrule-3537524054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e3f5707e5bf602c0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_web_security_group.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}